# bazel-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
projects/calc/: BUILD.bazel  calc.spec.js
projects/calc_web/: BUILD.bazel  index.js
projects/calculator/: BUILD.bazel  calculator.py
projects/calculator_lib/: BUILD.bazel  calculator_lib_test.py
python_deps/: requirements_lock.txt
